syntax = "proto3";

option csharp_namespace = "RecognizerGrpc";
option go_package = "github.com/vitao-coder/rekognitor/detector";

package detector;

service Detector {
  rpc FacialDetection (DetectionRequest) returns (DetectionReply);    
}

message DetectionRequest {  
	string request_id = 1;  
	bytes image_bytes = 2;
}

message DetectionReply {
	repeated float landmark = 1 [packed=false];
	string error = 2;
}